Colaboratory を使用して作成しました

--- a/cpp_aizuonline01.ipynb
+++ b/cpp_aizuonline01.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_aizuonline01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMSkUlG93d1ekvD8/7VCNpZ",
+      "authorship_tag": "ABX9TyOsVS/lUKMysJkLsVu4kyJG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -959,7 +959,7 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -982,7 +982,7 @@
       "source": [
         "!g++ adivbproblem.cpp -o adivbproblem; echo 3 2 |./adivbproblem"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1009,10 +1009,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "BCuR9r3rKAvd",
-        "outputId": "2b0beb65-50e6-4d76-d1c6-b7ac484b348c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2b0beb65-50e6-4d76-d1c6-b7ac484b348c"
       },
       "source": [
         "%%writefile circle01.cpp\n",
@@ -1026,7 +1026,7 @@
         "    std::cout << std::fixed << std::setprecision(6) << PI*r*r << \" \" << 2*PI*r << \"\\n\";\n",
         "}"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1041,15 +1041,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "04uTX8rsKAhN",
-        "outputId": "0da7e97b-2f66-4c4b-f432-b40592919827",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0da7e97b-2f66-4c4b-f432-b40592919827"
       },
       "source": [
         "!g++ circle01.cpp -o circle01; echo 3 |./circle01"
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1083,10 +1083,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "5mbtfkNRLvAq",
-        "outputId": "1b07d45b-2285-438d-e8e6-87b35c8e320d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1b07d45b-2285-438d-e8e6-87b35c8e320d"
       },
       "source": [
         "%%writefile simplecalculator.cpp\n",
@@ -1106,7 +1106,7 @@
         "    return 0;\n",
         "}"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1121,15 +1121,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "IG_g5ecpLu2h",
-        "outputId": "bd45703a-4264-47bc-80be-3eb48fdc2b9e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bd45703a-4264-47bc-80be-3eb48fdc2b9e"
       },
       "source": [
         "!g++ simplecalculator.cpp -o simplecalculator; echo 1 + 2 56 - 18 13 \\* 2 100 / 10 27 + 81 0 ? 0 |./simplecalculator"
       ],
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1147,20 +1147,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "FZ7XPafQNzgU"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "xSXjkxUWSTov"
       },
       "source": [
         "### ITP1_4_D: Min, Max and Sum\n",
-        "\"n\" 個の整数 $a_i\"(\"i\"=1,2,...\"n\")について、最大値、最小値、合計値を求める。\n",
+        "$n$ 個の整数 $a_i(i=1,2, \\dots n)$について、最大値、最小値、合計値を求める。 最初の値が個数を示す。\n",
         "\n",
         "例: 5 10 1 5 4 17 => 1 17 37\n"
       ]
@@ -1172,28 +1163,31 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c4577893-274d-476e-c08b-2e5ff0551280"
+        "outputId": "9697e708-7be0-459a-90dd-3c1ac2a7e69a"
       },
       "source": [
         "%%writefile minmaxsum.cpp\n",
-        "#include <stdio.h>\n",
+        "#include <iostream>\n",
         "#include <algorithm>\n",
-        "using namespace std;\n",
         "\n",
         "int main(){\n",
-        "\tint n,max_num = -1000001,min_num = 1000001,tmp;\n",
-        "\tlong long int sum = 0;\n",
-        "\tscanf(\"%d\",&n);\n",
+        "\tint n;\n",
+        "    double a;\n",
+        "    double minnum =1000000;\n",
+        "    double maxnum =-1000000;\n",
+        "    double sum=0;\n",
+        "\tstd::cin >> n;\n",
         "\tfor(int i = 0; i < n; i++){\n",
-        "\t\tscanf(\"%d\",&tmp);\n",
-        "\t\tsum += tmp;\n",
-        "\t\tmax_num = max(max_num,tmp);\n",
-        "\t\tmin_num = min(min_num,tmp);\n",
+        "        std::cin >> a;\n",
+        "\t\tmaxnum = std::max(maxnum, a);\n",
+        "\t\tminnum = std::min(minnum, a);\n",
+        "        sum += a;\n",
         "\t}\n",
-        "\tprintf(\"%d %d %lld\\n\",min_num,max_num,sum);\n",
+        "\tstd::cout << minnum << \" \" << maxnum << \" \" << sum << \"\\n\";\n",
+        "    return 0;\n",
         "}"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -1211,17 +1205,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d258fdd2-a18a-4af5-a296-ee037f68a057"
+        "outputId": "5c6cc8d0-370a-4942-dab7-fd52315d159e"
       },
       "source": [
-        "!g++ minmaxsum.cpp -o minmaxsum; echo 3 1 8 7|./minmaxsum"
+        "!g++ minmaxsum.cpp -o minmaxsum; echo 5 10 1 5 4 17 |./minmaxsum"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "1 8 16\n"
+            "1 17 37\n"
           ],
           "name": "stdout"
         }
@@ -1233,7 +1227,129 @@
         "id": "R32rAAK3d9o1"
       },
       "source": [
-        "### ITP1_5_A: Print a Rectangle\n"
+        "### ITP1_5_A: Print a Rectangle\n",
+        "たて $H$ cm よこ $W$ cm の長方形を描く。 '#'で表す。 0, 0 のとき入力の終わり。\n",
+        "\n",
+        "例: 3 4 5 6 2 2 0 0 =>  \n",
+        "####\n",
+        "####\n",
+        "####\n",
+        "\n",
+        "$\\dots$"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "es_4X4P5162v",
+        "outputId": "98ce7164-0b43-4e8d-c5d2-24232465cd87",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile printrectangle.cpp\n",
+        "#include <iostream>\n",
+        "int main(){\n",
+        "    int H, W;\n",
+        "    while (true){\n",
+        "        std::cin >> H >> W;\n",
+        "        if (H==0 && W==0) break;\n",
+        "        for (int i=0; i<H; i++){\n",
+        "            for (int j=0; j<W; j++){\n",
+        "                std::cout << \"#\";\n",
+        "            }\n",
+        "            std::cout << \"\\n\";\n",
+        "        }\n",
+        "        std::cout << \"\\n\";\n",
+        "    }\n",
+        "    return 0;\n",
+        "}"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting printrectangle.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f1ef0s4U16Vu",
+        "outputId": "c396f336-f924-48aa-ffe4-7991192705df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ printrectangle.cpp -o printrectangle; echo 3 4 5 6 2 2 0 0 |./printrectangle"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "####\n",
+            "####\n",
+            "####\n",
+            "\n",
+            "######\n",
+            "######\n",
+            "######\n",
+            "######\n",
+            "######\n",
+            "\n",
+            "##\n",
+            "##\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hI5aHEqT31sD"
+      },
+      "source": [
+        "# いまここ\n",
+        "以下のような、たてH cm よこ W cm の枠を描くプログラムを作成して下さい。\n",
+        "\n",
+        "##########\n",
+        "#........#\n",
+        "#........#\n",
+        "#........#\n",
+        "#........#\n",
+        "##########\n",
+        "上図は、たて 6 cm よこ 10 cm の枠を表しています。\n",
+        "\n",
+        "Input\n",
+        "入力は複数のデータセットから構成されています。各データセットの形式は以下のとおりです：\n",
+        "\n",
+        "H W\n",
+        "\n",
+        "H, W がともに 0 のとき、入力の終わりとします。\n",
+        "\n",
+        "Output\n",
+        "各データセットについて、たて H cm よこ W cm の枠を出力して下さい。\n",
+        "\n",
+        "各データセットの後に、１つの空行を入れて下さい。\n",
+        "\n",
+        "Constraints\n",
+        "3 ≤ H ≤ 300\n",
+        "3 ≤ W ≤ 300\n",
+        ">\n",
+        "Sample Input\n",
+        "3 4\n",
+        "5 6\n",
+        "3 3\n",
+        "0 0"
       ]
     },
     {
