Colaboratory を使用して作成しました

--- a/cpp_aizuonline01.ipynb
+++ b/cpp_aizuonline01.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_aizuonline01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOsVS/lUKMysJkLsVu4kyJG",
+      "authorship_tag": "ABX9TyP9MJUCMndwl/rApjEhHoAb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1230,22 +1230,49 @@
         "### ITP1_5_A: Print a Rectangle\n",
         "たて $H$ cm よこ $W$ cm の長方形を描く。 '#'で表す。 0, 0 のとき入力の終わり。\n",
         "\n",
-        "例: 3 4 5 6 2 2 0 0 =>  \n",
-        "####\n",
-        "####\n",
-        "####\n",
-        "\n",
-        "$\\dots$"
+        "例: 3 4 5 6 2 2 0 0 =>  \n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "es_4X4P5162v",
-        "outputId": "98ce7164-0b43-4e8d-c5d2-24232465cd87",
+        "id": "BEATiwjSQMuf",
+        "outputId": "e5004869-d8e1-4ccf-d8ca-c74393ce44b5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 84
+        }
+      },
+      "source": [
+        "%%html \n",
+        "<span style=\"font-family: monospace\">####<br>####<br>####<br>...</span>"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<span style=\"font-family: monospace\">####<br>####<br>####<br>...</span>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "es_4X4P5162v",
+        "outputId": "98ce7164-0b43-4e8d-c5d2-24232465cd87"
       },
       "source": [
         "%%writefile printrectangle.cpp\n",
@@ -1280,11 +1307,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "f1ef0s4U16Vu",
-        "outputId": "c396f336-f924-48aa-ffe4-7991192705df",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "f1ef0s4U16Vu",
+        "outputId": "c396f336-f924-48aa-ffe4-7991192705df"
       },
       "source": [
         "!g++ printrectangle.cpp -o printrectangle; echo 3 4 5 6 2 2 0 0 |./printrectangle"
@@ -1315,50 +1342,134 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "hI5aHEqT31sD"
+        "id": "MFuMIws1d_UU"
       },
       "source": [
-        "# いまここ\n",
-        "以下のような、たてH cm よこ W cm の枠を描くプログラムを作成して下さい。\n",
+        "### ITP1_5_B: Print a Frame\n",
+        "たて \"H\" cm よこ \"W\" cm の枠を描く。\n",
+        "\"H\", \"W\" がともに 0 のとき、入力の終わり。\n",
         "\n",
-        "##########\n",
-        "#........#\n",
-        "#........#\n",
-        "#........#\n",
-        "#........#\n",
-        "##########\n",
-        "上図は、たて 6 cm よこ 10 cm の枠を表しています。\n",
-        "\n",
-        "Input\n",
-        "入力は複数のデータセットから構成されています。各データセットの形式は以下のとおりです：\n",
-        "\n",
-        "H W\n",
-        "\n",
-        "H, W がともに 0 のとき、入力の終わりとします。\n",
-        "\n",
-        "Output\n",
-        "各データセットについて、たて H cm よこ W cm の枠を出力して下さい。\n",
-        "\n",
-        "各データセットの後に、１つの空行を入れて下さい。\n",
-        "\n",
-        "Constraints\n",
-        "3 ≤ H ≤ 300\n",
-        "3 ≤ W ≤ 300\n",
-        ">\n",
-        "Sample Input\n",
-        "3 4\n",
-        "5 6\n",
-        "3 3\n",
-        "0 0"
+        "例: 3 4 5 6 3 3 0 0 =>  "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mTpM4Mq7Q4MT",
+        "outputId": "05415672-0319-48f1-d603-b4be42c03232",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 84
+        }
+      },
+      "source": [
+        "%%html\n",
+        "<span style=\"font-family: monospace\">####<br>#..#<br>####<br>...</span>\n"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<span style=\"font-family: monospace\">####<br>#..#<br>####<br>...</span>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "k4ZJCIuGR2SJ",
+        "outputId": "c54f4d3a-9bf4-4c07-b84a-0bca924a2130",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile printframe.cpp\n",
+        "#include <iostream>\n",
+        "int main(){\n",
+        "    int H, W;\n",
+        "    while (true){\n",
+        "        std::cin >> H >> W;\n",
+        "        if (H==0 && W==0) break;\n",
+        "        for (int i=0; i<H; i++){\n",
+        "            for (int j=0; j<W; j++){\n",
+        "                if (i==0 || i==H-1 || j==0 || j==W-1){\n",
+        "                    std::cout << \"#\";\n",
+        "                } else {\n",
+        "                    std::cout << \".\";\n",
+        "                }\n",
+        "            }\n",
+        "            std::cout << \"\\n\";\n",
+        "        }\n",
+        "        std::cout << \"\\n\";\n",
+        "    }\n",
+        "    return 0;\n",
+        "}"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting printframe.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5zFzjE0lR2dZ",
+        "outputId": "bd94837c-4af7-4d8f-d776-c319c3497e9e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ printframe.cpp -o printframe; echo 3 4 5 6 3 3 0 0 |./printframe"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "####\n",
+            "#..#\n",
+            "####\n",
+            "\n",
+            "######\n",
+            "#....#\n",
+            "#....#\n",
+            "#....#\n",
+            "######\n",
+            "\n",
+            "###\n",
+            "#.#\n",
+            "###\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "MFuMIws1d_UU"
+        "id": "_NdMluBnTBL_"
       },
       "source": [
-        "### ITP1_5_B: Print a Frame\n"
+        "# いまここ"
       ]
     },
     {
