Colaboratory を使用して作成しました

--- a/cpp_aizuonline01.ipynb
+++ b/cpp_aizuonline01.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_aizuonline01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPhR7xCjrOHY7knmgaDtGk5",
+      "authorship_tag": "ABX9TyOcxkatmcCAljUKYng6zxQO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1774,10 +1774,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "udBhK5izB4D_",
-        "outputId": "e8a537e8-9802-4d3b-851d-e1bb07195c36",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e8a537e8-9802-4d3b-851d-e1bb07195c36"
       },
       "source": [
         "%%writefile findmissingcard.cpp\n",
@@ -1814,7 +1814,7 @@
         "    return 0;\n",
         "}\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1831,10 +1831,44 @@
         "id": "bQSM83J-B32x"
       },
       "source": [
-        "!g++ findmissingcard.cpp -o findmissingcard; echo 47 S 10 S 11 S 12 S 13 H 1 H 2 S 6 S 7 S 8 S 9 H 6 H 8 H 9 H 10 H 11 H 4 H 5 S 2 S 3 S 4 S 5 H 12 H 13 C 1 C 2 D 1 D 2 D 3 D 4 D 5 D 6 D 7 C 3 C 4 C 5 C 6 C 7 C 8 C 9 C 10 C 11 C 13 D 9 D 10 D 11 D 12 D 13  |./findmissingcard"
+        "!g++ findmissingcard.cpp -o findmissingcard; echo  47 S 10 S 11 S 12 S 13 H 1 H 2 S 6 S 7 S 8 S 9 H 6 H 8 H 9 H 10 H 11 H 4 H 5 S 2 S 3 S 4 S 5 H 12 H 13 C 1 C 2 D 1 D 2 D 3 D 4 D 5 D 6 D 7 C 3 C 4 C 5 C 6 C 7 C 8 C 9 C 10 C 11 C 13 D 9 D 10 D 11 D 12 D 13 |./findmissingcard"
       ],
-      "execution_count": 8,
+      "execution_count": 13,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NmemvWDvkw6x",
+        "outputId": "1003e2b7-9b58-4147-8b45-701da0c7e4ab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!echo  12 S 10 S 11 S 12 S 13 H 1 H 2 S 6 S 7 S 8 S 9 H 6 H 8  |./findmissingcard"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "S 3\n",
+            "S 4\n",
+            "S 5\n",
+            "H 3\n",
+            "H 4\n",
+            "H 5\n",
+            "C 3\n",
+            "C 4\n",
+            "C 5\n",
+            "D 3\n",
+            "D 4\n",
+            "D 5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
