Colaboratory を使用して作成しました

--- a/cpp_aizuonline01.ipynb
+++ b/cpp_aizuonline01.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_aizuonline01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOcxkatmcCAljUKYng6zxQO",
+      "authorship_tag": "ABX9TyMhizOHtKR7o7nCLVup/jhK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1777,7 +1777,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e8a537e8-9802-4d3b-851d-e1bb07195c36"
+        "outputId": "de51eb3b-85ab-46f3-ae78-c52ea23725ce"
       },
       "source": [
         "%%writefile findmissingcard.cpp\n",
@@ -1789,32 +1789,32 @@
         "    char suit;\n",
         "\n",
         "    for (int s = 0; s < 4; s++)\n",
-        "        for (int r = 1; r <= 13; r++) \n",
+        "        for (int r = 0; r < 13; r++) \n",
         "            cards[s][r] = 0;\n",
         "\n",
         "    std::cin >> n;\n",
         "    for (int i = 0; i < n; i++) {\n",
         "        std::cin >> suit >> rank;\n",
-        "        if (suit = 'S') cards[0][rank] = 1;\n",
-        "        if (suit = 'H') cards[1][rank] = 1;\n",
-        "        if (suit = 'C') cards[2][rank] = 1;\n",
-        "        if (suit = 'D') cards[3][rank] = 1;\n",
+        "        if (suit = 'S') cards[0][rank - 1] = 1;\n",
+        "        if (suit = 'H') cards[1][rank - 1] = 1;\n",
+        "        if (suit = 'C') cards[2][rank - 1] = 1;\n",
+        "        if (suit = 'D') cards[3][rank - 1] = 1;\n",
         "    }\n",
         "\n",
         "    for (int s = 0; s < 4; s++){\n",
-        "        for (int r = 1; r <= 13; r++){\n",
+        "        for (int r = 0; r < 13; r++){\n",
         "            if (cards[s][r]) continue;\n",
         "            if (s == 0) suit = 'S';\n",
         "            if (s == 1) suit = 'H';\n",
         "            if (s == 2) suit = 'C';\n",
         "            if (s == 3) suit = 'D';\n",
-        "            std::cout << suit << \" \" << r << \"\\n\";\n",
+        "            std::cout << suit << \" \" << r+1 << \"\\n\";\n",
         "        }\n",
         "    }\n",
         "    return 0;\n",
         "}\n"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -1833,38 +1833,85 @@
       "source": [
         "!g++ findmissingcard.cpp -o findmissingcard; echo  47 S 10 S 11 S 12 S 13 H 1 H 2 S 6 S 7 S 8 S 9 H 6 H 8 H 9 H 10 H 11 H 4 H 5 S 2 S 3 S 4 S 5 H 12 H 13 C 1 C 2 D 1 D 2 D 3 D 4 D 5 D 6 D 7 C 3 C 4 C 5 C 6 C 7 C 8 C 9 C 10 C 11 C 13 D 9 D 10 D 11 D 12 D 13 |./findmissingcard"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NmemvWDvkw6x",
-        "outputId": "1003e2b7-9b58-4147-8b45-701da0c7e4ab",
+        "id": "NmemvWDvkw6x"
+      },
+      "source": [
+        "!echo  12 S 10 S 11 S 12 S 13 H 1 H 2 S 6 S 7 S 8 S 9 H 6 H 8  |./findmissingcard"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vQn8bsgOMcMl",
+        "outputId": "7bc97677-afe5-4fda-bd99-b6fb44a63d88",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "!echo  12 S 10 S 11 S 12 S 13 H 1 H 2 S 6 S 7 S 8 S 9 H 6 H 8  |./findmissingcard"
+        "!echo  1 S 1  |./findmissingcard"
       ],
-      "execution_count": 21,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "S 2\n",
             "S 3\n",
             "S 4\n",
             "S 5\n",
+            "S 6\n",
+            "S 7\n",
+            "S 8\n",
+            "S 9\n",
+            "S 10\n",
+            "S 11\n",
+            "S 12\n",
+            "S 13\n",
+            "H 2\n",
             "H 3\n",
             "H 4\n",
             "H 5\n",
+            "H 6\n",
+            "H 7\n",
+            "H 8\n",
+            "H 9\n",
+            "H 10\n",
+            "H 11\n",
+            "H 12\n",
+            "H 13\n",
+            "C 2\n",
             "C 3\n",
             "C 4\n",
             "C 5\n",
+            "C 6\n",
+            "C 7\n",
+            "C 8\n",
+            "C 9\n",
+            "C 10\n",
+            "C 11\n",
+            "C 12\n",
+            "C 13\n",
+            "D 2\n",
             "D 3\n",
             "D 4\n",
-            "D 5\n"
+            "D 5\n",
+            "D 6\n",
+            "D 7\n",
+            "D 8\n",
+            "D 9\n",
+            "D 10\n",
+            "D 11\n",
+            "D 12\n",
+            "D 13\n"
           ],
           "name": "stdout"
         }
