--- a/cpp_aizuonline01.ipynb
+++ b/cpp_aizuonline01.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_aizuonline01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMi4udVtHbQD0JLrGWBYo/u",
+      "authorship_tag": "ABX9TyO7YAyRUHqZl+WAA0tVhhXt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1822,10 +1822,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "bQSM83J-B32x",
-        "outputId": "e8111298-aefe-40a1-d20f-8b4a5c0a6815",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e8111298-aefe-40a1-d20f-8b4a5c0a6815"
       },
       "source": [
         "!g++ findmissingcard.cpp -o findmissingcard; echo  47 S 10 S 11 S 12 S 13 H 1 H 2 S 6 S 7 S 8 S 9 H 6 H 8 H 9 H 10 H 11 H 4 H 5 S 2 S 3 S 4 S 5 H 12 H 13 C 1 C 2 D 1 D 2 D 3 D 4 D 5 D 6 D 7 C 3 C 4 C 5 C 6 C 7 C 8 C 9 C 10 C 11 C 13 D 9 D 10 D 11 D 12 D 13 |./findmissingcard"
@@ -1862,12 +1862,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JWOYdTDcgUl4",
-        "outputId": "999b0187-b6a8-4c82-9d7a-7a7916b27684",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
-        }
+        },
+        "id": "JWOYdTDcgUl4",
+        "outputId": "999b0187-b6a8-4c82-9d7a-7a7916b27684"
       },
       "source": [
         "%%html\n",
@@ -1924,11 +1924,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9KC4AhNVkjhh",
-        "outputId": "8b59ba24-ee5f-4ae8-9e37-79f9e5d66e36",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9KC4AhNVkjhh",
+        "outputId": "8b59ba24-ee5f-4ae8-9e37-79f9e5d66e36"
       },
       "source": [
         "%%writefile officialhouse.cpp\n",
@@ -1970,11 +1970,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9ZLB-DYzkjX6",
-        "outputId": "2f1455ef-c14c-4344-e182-d191ca31f742",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9ZLB-DYzkjX6",
+        "outputId": "2f1455ef-c14c-4344-e182-d191ca31f742"
       },
       "source": [
         "!g++ officialhouse.cpp -o officialhouse; echo 3 1 1 3 8 3 2 2 7 4 3 8 1 |./officialhouse"
@@ -2007,20 +2007,92 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "zykpkrJvnHNk"
+        "id": "MoY5kTtheI2a"
       },
       "source": [
-        "# いまここ"
+        "### ITP1_6_D: Matrix Vector Multiplication\n",
+        "$n \\times m$ の行列 $A$ と、$m \\times 1$ の列ベクトル $b$ を読み込み、$A$ と $b$ の積を出力する。\n",
+        "\n",
+        "例: 3 4 1 2 0 1 0 3 0 1 4 1 1 0 1 2 3 0 =>   \n",
+        "5  \n",
+        "6  \n",
+        "9  \n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BRZMtp2d39jV",
+        "outputId": "bf702dc8-ab41-458a-f583-1a3e8db0185e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile matrixvectormultiplication.cpp\n",
+        "#include <iostream>\n",
+        "\n",
+        "int main(){\n",
+        "    int n, m, A[100][100], b[100], c[100];\n",
+        "    std::cin >> n >> m;\n",
+        "    for (int i=0; i<n; i++)\n",
+        "        for (int j=0; j<m; j++) std::cin >> A[i][j];\n",
+        "    for (int i=0; i<m; i++) std::cin >> b[i];\n",
+        "\n",
+        "    for (int i=0; i<n; i++){\n",
+        "        c[i] = 0;\n",
+        "        for (int j=0; j<m; j++) {\n",
+        "            c[i] += A[i][j]*b[j];\n",
+        "        }\n",
+        "    }\n",
+        "    \n",
+        "    for (int i=0; i<n; i++) std::cout << c[i] << \"\\n\";\n",
+        "    return 0;\n",
+        "}"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting matrixvectormultiplication.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Zfr-O0KG3-Bb",
+        "outputId": "e7972665-0643-4732-d0aa-919b0a94be5b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ matrixvectormultiplication.cpp -o matrixvectormultiplication; echo 3 4 1 2 0 1 0 3 0 1 4 1 1 0 1 2 3 0 |./matrixvectormultiplication"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5\n",
+            "6\n",
+            "9\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "MoY5kTtheI2a"
+        "id": "4wEycqpE59ny"
       },
       "source": [
-        "### ITP1_6_D: Matrix Vector Multiplication\n",
-        "\n"
+        "# いまここ"
       ]
     },
     {
