Colaboratory を使用して作成しました

--- a/lisp01.ipynb
+++ b/lisp01.ipynb
@@ -6,7 +6,7 @@
       "name": "lisp01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOlo+o+TNAxsJ+vnCF7RJZk",
+      "authorship_tag": "ABX9TyNqkiveh3XuOwjQYMJDtcC0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,7 +72,7 @@
         "%%capture\n",
         "!apt install sbcl"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -91,13 +91,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mwJgXRokm1Wd",
-        "outputId": "8af37c9e-4018-4fd0-e21f-86884b7664e0"
+        "outputId": "1e5fc890-c720-4565-9f39-95c966365e50"
       },
       "source": [
         "%%script sbcl\n",
         "(+ 2 3)"
       ],
-      "execution_count": 49,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,24 +135,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wFK3swsXnBq-",
-        "outputId": "3a1e2c14-b256-4166-e1c9-9abe650d575a"
+        "outputId": "761f9bed-a69f-4afb-ea33-dde1cbad8a2c"
       },
       "source": [
-        "%%script sbcl\n",
+        "%%script sbcl --noinform\n",
         "(- 100 10 1)"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "This is SBCL 1.4.5.debian, an implementation of ANSI Common Lisp.\n",
-            "More information about SBCL is available at <http://www.sbcl.org/>.\n",
-            "\n",
-            "SBCL is free software, provided as is, with absolutely no warranty.\n",
-            "It is mostly in the public domain; some portions are provided under\n",
-            "BSD-style licenses.  See the CREDITS and COPYING files in the\n",
-            "distribution for more information.\n",
             "* \n",
             "89\n",
             "* "
@@ -177,18 +170,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0egHkuX8shrv",
-        "outputId": "de646dee-793c-47ad-a326-d1603c872194"
+        "outputId": "fb1b52e1-1928-4b95-8187-821f243daf5a"
       },
       "source": [
         "%%writefile fact01.lisp\n",
         "(defun fact (n) (if (<= n 1) 1 (* n (fact (- n 1)))))"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Writing fact01.lisp\n"
+            "Overwriting fact01.lisp\n"
           ],
           "name": "stdout"
         }
@@ -201,14 +194,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uNC3CZjRs5Oo",
-        "outputId": "9eb3e4be-fd2e-46fd-c668-e4783565f45b"
+        "outputId": "6326e715-8f7f-4d9e-aae7-a7f20130e1f7"
       },
       "source": [
         "%%script sbcl --noinform\n",
         "(load \"fact01\")\n",
         "(fact 10)"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -230,13 +223,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J78qD7MBzrWg",
-        "outputId": "26a60cc4-0fb4-4297-a41f-440689f4df46"
+        "outputId": "8abb4f4f-5b26-4344-b010-19118e40f5c8"
       },
       "source": [
         "%%script sbcl --noinform\n",
         "(+ 1 2 3 4 5)"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -285,7 +278,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1a9020fc-7da4-4335-87e7-01b3901a8879"
+        "outputId": "44a0f78e-e341-4815-c3e8-fd1b75ea3924"
       },
       "source": [
         "%%script sbcl --noinform\n",
@@ -295,7 +288,7 @@
         "(mod 7 2)\n",
         "(mod -7 2)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -320,10 +313,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Gtjj3GmgaM4F",
-        "outputId": "ad27dc5e-8bf9-4f9e-889a-802ff0120bbe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fa08b384-feae-4725-b625-c1420c66e3d8"
       },
       "source": [
         "%%script sbcl --noinform\n",
@@ -332,7 +325,7 @@
         "'(10 20)\n",
         "'(this)"
       ],
-      "execution_count": 52,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -355,17 +348,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "kd1Xvdh2bOkQ",
-        "outputId": "cbfd16eb-68d8-479b-9b1b-04375319820c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cbfd16eb-68d8-479b-9b1b-04375319820c"
       },
       "source": [
         "%%script sbcl --noinform\n",
         "\"こんにちは、世界!\"\n",
         "'(こんにちは、世界!)"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -384,16 +377,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "RpPEELCPbr1t",
-        "outputId": "eb68cc17-f87b-4475-f40a-4f929298f6fe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4e3da2e5-152a-4aec-b29d-0c16609d3a7b"
       },
       "source": [
         "%%script sbcl --noinform\n",
         "(format t \"hello, world\")"
       ],
-      "execution_count": 55,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -405,6 +398,71 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_0bOM7fqWppH",
+        "outputId": "94b989f9-9a53-44cb-b8cf-e8c56a73a41b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile helloworld01.lisp\n",
+        "(defun hello-world ()\n",
+        "  (format t \"Hello, world!\"))"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting helloworld01.lisp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pIhv4IUiWW4k",
+        "outputId": "edd566b9-a3ab-4572-8ed6-725c14535b24",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%script sbcl --noinform\n",
+        "(load \"helloworld01\")\n",
+        "(hello-world)"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "* \n",
+            "T\n",
+            "* Hello, world!\n",
+            "NIL\n",
+            "* "
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mPMjzikcWdE4"
+      },
+      "source": [
+        "\"\""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
